changing style based on example

--- a/index.html
+++ b/index.html
@@ -1,264 +1,20 @@
-<!DOCTYPE html>
 <html>
-
 <head>
-    <title>Memory</title>
-    <link rel="stylesheet" href="style.css">
+	<link href="style.css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
+	<script src="script.js"></script>
 </head>
-
 <body>
-    <div class="game-container">
-        <h1 id="title">MEMORY</h1>
-        <p id="text">Score: <span id="score">0</span>
-            | Time: <span id="time">00:00</span></p>
-        <div class="grid-rectangles" id="gridRectangles"></div>
-    </div>
-    <div>
-        <ul class="cards">
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            <li class="card">
-                <div class="view front-view">
-                </div>
-                <div class="view back-view">
-                </div>
-            </li>
-            </li>
-        </ul>
-    </div>
-
-    <script src="script.js"></script>
+	<div class="app">
+		<div class="app-header">
+			<div class="app-title">
+				MEMORY
+			</div>
+		</div>
+		<div class="content">
+			<div class="cards">
+			</div>
+		</div>
+	</div>
 </body>
-
 </html>
