--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <html>
+
 <head>
-	<link href="style.css" rel="stylesheet">
-	<link href="style.css" rel="stylesheet">
-	<script src="script.js"></script>
+  <title>MEMORY game</title>
+  <link href="style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+  <script src="script.js"></script>
 </head>
+
 <body>
-	<div class="app">
-		<div class="app-header">
-			<div class="app-title">
-				MEMORY
-			</div>
-		</div>
-		<div class="content">
-			<div class="cards">
-			</div>
-		</div>
-	</div>
+  <div class="app">
+    <div class="app-header">
+      <div class="app-title">
+        MEMORY
+      </div>
+    </div>
+    <div class="content">
+      <div class="cards">
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
