return button works
needs styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>MEMORY game</title>
   <link href="style.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
   <script src="script.js"></script>
 </head>
 
@@ -14,6 +13,9 @@
         MEMORY
       </div>
     </div>
+  <div class="restart">
+      <button class="restart-button">restart</button>
+  </div>
     <div class="content">
       <div class="cards">
       </div>
