--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html>
 
 <head>
   <title>MEMORY game</title>
   <link href="style.css" rel="stylesheet">
-  <script src="script.js"></script>
 </head>
 
 <body>
@@ -12,15 +12,19 @@
       <div class="app-title">
         MEMORY
       </div>
+      <div class="restart">
+        <button class="restart-button">
+          <img src="symbols/restartButton.png" alt="Restart Button">
+        </button>
+      </div>
     </div>
-  <div class="restart">
-      <button class="restart-button">restart</button>
-  </div>
     <div class="content">
       <div class="cards">
       </div>
     </div>
   </div>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
