grid test using functions for responsiveness

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </button>
       </div>
     </div>
-        <div class="grid-container">
+        <div class="grid-container" id="gridContainer">
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
