--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>MEMORY</h1>
   <div id="score-timer-container">
     <div id="score">Score: 0</div>
-    <div id="timer">Timer: 0</div>
+    <div id="time">Time: 00:00</div>
   </div>
 
   <div id="grid-container"></div>
