updated overlay style

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
 
   <div id="overlay-container">
     <div id="overlay-content">
-      <h2>CONGRATULATIONS</h2>
-      <p>You won!</p>
       <button id="overlay-restart" class="restart-button">
         <img src="symbols/restartButton.png" alt="Restart Button">
       </button>
+      <h2>CONGRATULATIONS, you won!</h2>
+      <div id="overlay-score-time">
+        <p><span id="overlay-score"></span></p>
+        <p><span id="overlay-time"></span></p>
+      </div>
     </div>
   </div>
 
