--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <button id="overlay-restart" class="restart-button">
         <img src="symbols/restartButton.png" alt="Restart Button">
       </button>
-      <h2>CONGRATULATIONS, you won!</h2>
+      <h2>CONGRATULATIONS,</h2>
+      <h2>you won!</h2>
       <div id="overlay-score-time">
         <p><span id="overlay-score"></span></p>
         <p><span id="overlay-time"></span></p>
