--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
-  <!-- Title and links -->
+  <!-- Title and link to css -->
   <title>MEMORY game</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+
+  <!-- Favicon -->
   <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
 </head>
 
